--- a/views/jordan.handlebars
+++ b/views/jordan.handlebars
@@ -18,10 +18,10 @@
           </div>
         </div>
         <div class="col-sm-3 col-xs-12">
-          <div class="b-detail__head-price">
+          <!-- <div class="b-detail__head-price">
             <div class="b-detail__head-price-num">$44,380</div>
             <p>Included Taxes &amp; Checkup</p>
-          </div>
+          </div> -->
         </div>
       </div>
     </header>
