meta robots & title

--- a/views/layouts/autoclub.handlebars
+++ b/views/layouts/autoclub.handlebars
@@ -3,7 +3,8 @@
 	<head>
 		<meta charset="utf-8"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
-		<title>{{title }} - Auto Club</title>
+		<meta name="robots" content="noindex, nofollow">
+		<title>{{title }} - An Auto Rivalry Matchup</title>
 
 		<link rel="shortcut icon" type="image/x-icon" href="/images/favicon.png" />
 
