pinch header in

--- a/views/jordan.handlebars
+++ b/views/jordan.handlebars
@@ -9,22 +9,16 @@
 
 <section class="b-detail s-shadow">
   <div class="container">
-    <header class="b-detail__head s-lineDownLeft wow zoomInUp" data-wow-delay="0.5s">
-      <div class="row">
-        <div class="col-sm-9 col-xs-12">
+    <div class="row">
+      <div class="col-md-10 col-xs-12 col-md-offset-1">
+        <header class="b-detail__head s-lineDownLeft wow zoomInUp" data-wow-delay="0.5s">
           <div class="b-detail__head-title">
             <h1>{{ title }}</h1>
             <h3>{{ hero.detail.make.name }} {{ hero.detail.model.name }} vs. {{ villain.detail.make.name }} {{ villain.detail.model.name }}</h3>
           </div>
-        </div>
-        <div class="col-sm-3 col-xs-12">
-          <!-- <div class="b-detail__head-price">
-            <div class="b-detail__head-price-num">$44,380</div>
-            <p>Included Taxes &amp; Checkup</p>
-          </div> -->
-        </div>
+        </header>
       </div>
-    </header>
+    </div>
 
     <div class="b-detail__main">
       <div class="row">
