added consumer reviews disclaimers

--- a/views/jordan.handlebars
+++ b/views/jordan.handlebars
@@ -60,7 +60,7 @@
               </div>
 
               <div id="info2">
-                <h2>Professional Reviews from Edmunds</h2>
+                <h2>Professional Reviews from Edmunds.com</h2>
                 <p>
                   {{ hero.edmunds_ratings.summary }}
                 </p>
@@ -195,6 +195,9 @@
                 <div class="row">
                   <div class="col-xs-12">
                     <h2>{{ hero.detail.make.name }} {{ hero.detail.model.name }} Consumer Reviews: </h2>
+                    <p class="lead">
+                      Selected visitor reviews of this vehicle posted on <a href="http://www.edmunds.com/" alt="Edmunds.com">Edmunds.com</a>:
+                    </p>
                   </div>
                 </div>
                 <div class="b-items__cars">
@@ -716,14 +719,22 @@
   </div><!-- .container -->
 </section>
 
-<!-- <div class="b-features">
+<div class="b-features">
   <div class="container">
     <div class="row">
       <div class="col-md-9 col-md-offset-3 col-xs-6 col-xs-offset-6">
         <ul class="b-features__items">
-          <li class="wow zoomInUp" data-wow-delay="0.3s" data-wow-offset="100">Multipoint Safety Check</li>
         </ul>
+      </div>
+    </div><!-- .row -->
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <p class="text-center">
+          <small>
+            Edmunds.com Visitor Vehicle Ratings and Reviews are the property of Edmunds.com, and may not be reproduced or distributed without the consent of Edmunds.com. Edmunds® is a trademark of Edmunds.com, Inc. Edmunds.com, Inc. is not affiliated with this website or app.
+          </small>
+        </p>
       </div>
     </div>
   </div>
-</div> --><!--b-features-->
+</div>
