--- a/views/jordan.handlebars
+++ b/views/jordan.handlebars
@@ -719,20 +719,27 @@
   </div><!-- .container -->
 </section>
 
-<div class="b-features">
+<section id="legal">
   <div class="container">
     <div class="row">
-      <div class="col-md-9 col-md-offset-3 col-xs-6 col-xs-offset-6">
-        <ul class="b-features__items">
-        </ul>
+      <div class="col-md-4">
+        <a href="http://www.edmunds.com/?id=apis" alt="Edmunds API">
+          <img src="/img/edmunds_300_horizontal_color.png" alt="" class="img-responsive"/>
+        </a>
       </div>
-    </div><!-- .row -->
-    <div class="row">
-      <div class="col-md-8 col-md-offset-2">
+      <div class="col-md-8">
         <p class="text-center">
+          <br>
           <small>
             Edmunds.com Visitor Vehicle Ratings and Reviews are the property of Edmunds.com, and may not be reproduced or distributed without the consent of Edmunds.com. Edmunds® is a trademark of Edmunds.com, Inc. Edmunds.com, Inc. is not affiliated with this website or app.
           </small>
+        </p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2">
+        <p class="text-center">
+          Copyright Auto Rivalry 2016
         </p>
       </div>
     </div>
